<resources>
    <string name="app_name">Chess</string>
    <string name="theme_color_pref_title">Select theme</string>
    <string name="action_settings">Settings</string>
    <string name="letters">abcdefgh</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_closed">drawer closed</string>

    <string-array name="figures">
        <item>QUEEN</item>
        <item>ROOK</item>
        <item>KNIGHT</item>
        <item>BISHOP</item>
        <item>BISHOP</item>

    </string-array>


    <string-array name="board_themes">
        <item>Warm</item>
        <item>Cool</item>
        <item>Mint</item>
    </string-array>

    <string-array name="menu_items">
        <item>Games</item>
        <item>Game records</item>
        <item>Settings</item>
    </string-array>

    <string-array name="bot_levels">
        <item>Completely random</item>
        <item>Fast and stupid</item>
        <item>Thoughtful</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chess Game</string>
    <string name="nav_header_subtitle">for Android School 2019-2020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_games">Games</string>
    <string name="menu_records">Game records</string>
    <string name="game_time">Time</string>
    <string name="game_title">Game</string>
    <string name="collapsing_toolbar_title">Welcome!</string>
    <string name="key_notation">NOTATION_FOR_DATE</string>
    <string name="game_date">GAME_FOR_DATE</string>
    <string name="key_save_gameDate">SAVE</string>
    <string name="exit_game">Exit</string>
    <string name="game_result">RESULT</string>
    <string name="dialog_show">SHOW</string>
    <string name="delete_title">DELETESTRING</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="delete_parameter">DELETEDATE</string>
    <string name="no_records">No Records</string>
    <string name="delete_dialog_show">DELETESHOW</string>
    <string name="no_games">No games</string>
    <string name="game_name_hint">Game name</string>
    <string name="player_name_hint">Player name</string>
    <string name="play_with_bot">Play with bot, select color for bot</string>
    <string name="select_color">Select color</string>
    <string name="button_white">white</string>
    <string name="button_black">black</string>
    <string name="tag_start_game">STARTGAME</string>
    <string name="button_play">play</string>
    <string name="game_name">GAMENAME</string>
    <string name="dialog_human">HUMANPLAYER</string>
    <string name="dialog_bot">BOTPLAYER</string>
    <string name="vs">VS</string>
    <string name="recycler_human">PLAYER1</string>
    <string name="recycler_bot">PLAYER2</string>
    <string name="choice_dialog">CHOICESHOWN</string>
    <string name="key_save_gameWhite">HUMANSAVED</string>
    <string name="key_save_gameBlack">BOTSAVED</string>
    <string name="key_saved_result">SAVEDRESULT</string>
    <string name="key_save_selectedX">SELECTEDX</string>
    <string name="key_save_selectedY">SELECTEDY</string>
    <string name="key_save_movedX">MOVEDX</string>
    <string name="key_save_movedY">MOVEDY</string>
    <string name="key_saved_newFigure">NEWFIGURE</string>
    <string name="menu_players">Players</string>
    <string name="edit_player_name_hint">Modify name</string>
    <string name="level">Your level</string>
    <string name="ok">OK</string>
    <string name="fragment_players">PLAYERS</string>
    <string name="fragment_records">RECORDS</string>
    <string name="fragment_games">GAMES</string>
    <string name="your_name_is">Your name is</string>
    <string name="prefs_player_name">NEW_PLAYER_NAME</string>
    <string name="key_preferences">PLAYERS</string>
    <string name="key_visited">hasVisited</string>
    <string name="error_player">Player name</string>
    <string name="error_empty">is empty</string>
    <string name="pref_key_botlevel">BOTLEVEL</string>
    <string name="level_random">RANDOM</string>
    <string name="bot_sign">BOT</string>


</resources>
