<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:id="@+id/apply_player_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:text="@string/your_name_is"
    android:textSize="@dimen/small_text"
    />

    <EditText
        android:id="@+id/edit_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/edit_player_name_hint" />

    <Button
        android:id="@+id/player_apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:text="@string/ok" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/level"
        android:textSize="@dimen/small_text"
        android:textAlignment="center"/>

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:rating="4"
        />

</LinearLayout>