<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_ripple"
    android:orientation="vertical"
    android:tag="cards main container">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/game_title"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.508"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/game_icon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/vs"
            card_view:layout_constraintBottom_toTopOf="@+id/winner"
            card_view:layout_constraintEnd_toStartOf="@+id/player2"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/player1"
            card_view:layout_constraintTop_toBottomOf="@+id/game_time" />

        <ImageView
            android:id="@+id/game_icon"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/default_margin"
            android:tag="image_tag"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:text="black  winner"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:text="player1"
            android:textAlignment="center"
            card_view:layout_constraintBottom_toTopOf="@+id/winner"
            card_view:layout_constraintEnd_toStartOf="@+id/textView4"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="@+id/winner"
            card_view:layout_constraintTop_toBottomOf="@+id/game_time" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:text="player2"
            android:textAlignment="center"
            card_view:layout_constraintBottom_toTopOf="@+id/winner"
            card_view:layout_constraintEnd_toEndOf="@+id/winner"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/textView4"
            card_view:layout_constraintTop_toBottomOf="@+id/game_time" />

        <TextView
            android:id="@+id/game_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/game_time"
            android:textAlignment="center"
            card_view:layout_constraintEnd_toEndOf="@+id/player2"
            card_view:layout_constraintHorizontal_bias="0.515"
            card_view:layout_constraintStart_toStartOf="@+id/player1"
            card_view:layout_constraintTop_toBottomOf="@+id/game_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorPrimary" />

</LinearLayout>

